<resources>
    <string name="app_name">Text to Image Search</string>
    <string name="text_to_image_search">Text to Image Search</string>
    <string name="eg_search_hints">"hint: \"mountains and forest\""</string>
    <string name="refresh">Refresh</string>
    <string name="search_icon">Search icon</string>
    <string name="clear">Clear</string>
    <string name="search">Search</string>
    <string name="share_icon">Share Icon</string>
    <string name="find_more_similar_images">Find more similar images</string>
    <string name="view_in_map_button">View in Map Button</string>
    <string name="_1_jan_2023">1 Jan, 2023</string>
    <string name="toolbar_menu">Toolbar Menu</string>
</resources>