<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.SearchFragment"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_to_image_search"
        android:elevation="4dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart ="8dp"
        android:layout_marginEnd ="16dp"
        android:layout_marginBottom ="8dp"
        android:gravity="center">

        <EditText
            android:id="@+id/searchText"
            android:layout_width="0dp"
            android:layout_weight = "1"
            android:layout_height="40dp"
            android:paddingStart ="8dp"
            android:paddingEnd = "4dp"
            android:hint="@string/eg_search_hints"
            android:inputType="textWebEditText|text"
            android:background="@drawable/edittext_border"/>

        <ImageButton
            android:id="@+id/searchIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_image_search_24"
            android:contentDescription="@string/search_icon"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:padding="8dp" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        app:layoutManager="GridLayoutManager"
        android:layout_marginStart ="6dp"
        android:layout_marginEnd ="6dp"
        app:spanCount="3" />




</LinearLayout>