<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".fragments.ImageFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:gravity="center"
        tools:marginRight = "16dp"
        tools:marginStart = "0dp"
        android:orientation="horizontal">

<!--        <Space-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_weight="2"-->
<!--            tools:ignore="NestedWeights" />-->
        <TextView
            android:id="@+id/locationNameTextView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="12"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/_1_jan_2023"
            android:textColor="@color/iconColor"
            android:textSize="14sp"
            android:typeface="normal" />

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/_1_jan_2023"
            android:textColor="@color/iconColor"
            android:textSize="14sp"
            android:typeface="normal" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center">

            <ImageButton
                android:id="@+id/buttonShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_share_24"
                android:contentDescription="@string/share_icon"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:padding="8dp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                tools:ignore="NestedWeights" />
        </LinearLayout>

    </LinearLayout>

    <com.github.chrisbanes.photoview.PhotoView
        android:id="@+id/singeImageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="83"
        android:background="#f3f3f3"
        tools:src="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="7dp">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/buttonImage2Image"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/find_more_similar_images"
            android:textColor= "@color/iconColor"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    tools:ignore="NestedWeights" />

        <ImageButton
            android:id = "@+id/buttonViewInMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_location_pin_24"
            android:contentDescription="@string/view_in_map_button"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:padding="8dp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            tools:ignore="NestedWeights" />

    </LinearLayout>

</LinearLayout>